--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>VAI SER UMA IMAGEM AQUI
-            <ul>
-                <li>Escola</li>
-                <li>Estudante</li>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem"src="Logoalura.jpg" alt="Logo da Alura">
+            <ul class="cabecalho-lista">
+                <li class="cabecalho-lista-item">Escola</li>
+                <li class="cabecalho-lista-item">Estudante</li>
                 </ul>
         
     </header>
