--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header class="cabecalho">
         <img class="cabecalho-imagem"src="Logoalura.jpg" alt="Logo da Alura">
+        <img class="cabecalho-imagem2"src="png-clipart-loupe-loupe.png" alt="Imagem de uma lupa">
             <ul class="cabecalho-lista">
                 <li class="cabecalho-lista-item">Escola</li>
                 <li class="cabecalho-lista-item">Estudante</li>
