--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem"src="Logoalura.jpg" alt="Logo da Alura">
+        <img class="cabecalho-imagem"src="Logoalura.jpg" width="220" height="80" alt="Logo da Alura" id="imgpos">
         <img class="cabecalho-imagem2"src="png-clipart-loupe-loupe.png" alt="Imagem de uma lupa">
             <ul class="cabecalho-lista">
                 <li class="cabecalho-lista-item">Escola</li>
