--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
                 </ul>
         
     </header>
+    <section class="Escola">
+        <div class="escola-div-conteudo"> <h2 class="Escola-titulo"> Sobre a Escola </h2>
+            <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação. </p>
+            <p class="escola-texto-dois">
+                A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p></div>
+       
+            <img class="escola-imagem" src="grupo-de-personagens-de-desenhos-animados-de-criancas-pequenas-em-fundo-branco_1308-51545.avif" alt="escola=imagem">
+    </section>
 </body>
 </html>
