--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
@@ -17,13 +20,21 @@
                 </ul>
         
     </header>
-    <section class="Escola">
-        <div class="escola-div-conteudo"> <h2 class="Escola-titulo"> Sobre a Escola </h2>
+    <section class="escola">
+        <div class="escola-div-conteudo"> 
+            <h2 class="escola-titulo"> Sobre a Escola </h2>
             <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação. </p>
             <p class="escola-texto-dois">
                 A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p></div>
        
             <img class="escola-imagem" src="grupo-de-personagens-de-desenhos-animados-de-criancas-pequenas-em-fundo-branco_1308-51545.avif" alt="escola=imagem">
     </section>
+    <section class="estudante"></section>
+    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
+    <h3 class="estudante-nome">Marcelo</h3>
+    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
+    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
 </body>
 </html>
