--- a/index.html
+++ b/index.html
@@ -29,12 +29,67 @@
        
             <img class="escola-imagem" src="grupo-de-personagens-de-desenhos-animados-de-criancas-pequenas-em-fundo-branco_1308-51545.avif" alt="escola=imagem">
     </section>
-    <section class="estudante"></section>
+    <section class="estudante">
+    
     <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <div class="estudante-todos">
+    <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
     <img class="estudante-icone" src="instagram.png" alt="icone instagram">
     <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
     <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+</div>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
+    <h3 class="estudante-nome">Marcelo</h3>
+    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
+    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+</div>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
+    <h3 class="estudante-nome">Marcelo</h3>
+    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
+    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+</div>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
+    <h3 class="estudante-nome">Marcelo</h3>
+    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
+    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+</div>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
+    <h3 class="estudante-nome">Marcelo</h3>
+    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
+    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+</div>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
+    <h3 class="estudante-nome">Marcelo</h3>
+    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
+    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+</div>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
+    <h3 class="estudante-nome">Marcelo</h3>
+    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
+    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+</div>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
+    <h3 class="estudante-nome">Marcelo</h3>
+    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
+    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+</div>
+</div>
+</section>
 </body>
 </html>
