--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     
     <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
     <div class="estudante-todos">
+
     <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
@@ -40,6 +41,7 @@
     <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
     <img class="estudante-icone" src="twitter.png" alt="icone twitter">
 </div>
+
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
@@ -54,6 +56,7 @@
     <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
     <img class="estudante-icone" src="twitter.png" alt="icone twitter">
 </div>
+
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
@@ -61,6 +64,8 @@
     <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
     <img class="estudante-icone" src="twitter.png" alt="icone twitter">
 </div>
+<span></span>
+
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
@@ -68,6 +73,8 @@
     <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
     <img class="estudante-icone" src="twitter.png" alt="icone twitter">
 </div>
+<span></span>
+
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
@@ -75,6 +82,8 @@
     <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
     <img class="estudante-icone" src="twitter.png" alt="icone twitter">
 </div>
+<span></span>
+
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
@@ -82,6 +91,8 @@
     <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
     <img class="estudante-icone" src="twitter.png" alt="icone twitter">
 </div>
+<span></span>
+
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
@@ -89,6 +100,7 @@
     <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
     <img class="estudante-icone" src="twitter.png" alt="icone twitter">
 </div>
+<span></span>
 </div>
 </section>
 </body>
