--- a/index.html
+++ b/index.html
@@ -32,76 +32,78 @@
     <section class="estudante">
     
     <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-    <div class="estudante-todos">
 
+    <div class="estudante-todos">
+        <span></span>
     <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
-    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
-    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+    <a href="https://github.com/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    <a href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwjCu9eDpsD_AhUIr5UCHdQ1BmEQPAgI"><img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp"></a>
+    <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="estudante-icone" src="twitter.png" alt="icone twitter"></a>
 </div>
 
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
-    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
-    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+    <a href="https://github.com/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    <a href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwjCu9eDpsD_AhUIr5UCHdQ1BmEQPAgI"><img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp"></a>
+    <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="estudante-icone" src="twitter.png" alt="icone twitter"></a>
 </div>
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
-    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
-    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+    <a href="https://github.com/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    <a href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwjCu9eDpsD_AhUIr5UCHdQ1BmEQPAgI"><img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp"></a>
+    <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="estudante-icone" src="twitter.png" alt="icone twitter"></a>
 </div>
 
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
-    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
-    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+    <a href="https://github.com/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    <a href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwjCu9eDpsD_AhUIr5UCHdQ1BmEQPAgI"><img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp"></a>
+    <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="estudante-icone" src="twitter.png" alt="icone twitter"></a>
 </div>
+
 <span></span>
 
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
-    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
-    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+    <a href="https://github.com/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    <a href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwjCu9eDpsD_AhUIr5UCHdQ1BmEQPAgI"><img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp"></a>
+    <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="estudante-icone" src="twitter.png" alt="icone twitter"></a>
 </div>
-<span></span>
+
 
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
-    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
-    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+    <a href="https://github.com/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    <a href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwjCu9eDpsD_AhUIr5UCHdQ1BmEQPAgI"><img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp"></a>
+    <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="estudante-icone" src="twitter.png" alt="icone twitter"></a>
 </div>
-<span></span>
+
 
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
-    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
-    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+    <a href="https://github.com/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    <a href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwjCu9eDpsD_AhUIr5UCHdQ1BmEQPAgI"><img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp"></a>
+    <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="estudante-icone" src="twitter.png" alt="icone twitter"></a>
 </div>
-<span></span>
 
 <div class="estudante-div">
     <img class="estudante-imagem" src="Marcelo 1.png" alt="foto estudante">
     <h3 class="estudante-nome">Marcelo</h3>
-    <img class="estudante-icone" src="instagram.png" alt="icone instagram">
-    <img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp">
-    <img class="estudante-icone" src="twitter.png" alt="icone twitter">
+    <a href="https://github.com/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    <a href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwjCu9eDpsD_AhUIr5UCHdQ1BmEQPAgI"><img class="estudante-icone" src="whatsapp.png" alt="icone whatsapp"></a>
+    <a href="https://www.educacao.pr.gov.br/iniciar/"><img class="estudante-icone" src="twitter.png" alt="icone twitter"></a>
 </div>
-<span></span>
 </div>
 </section>
+<footer class="rodape"> 
+    <img class="rodape-imagem" src="Logoalura.jpg" alt="">   </footer>
 </body>
 </html>
